# OOP

./: Hello_world.cpp  README.md  a.out
lab1/: CMakeLists.txt  githublink.txt
lab1/src/: foo.cpp  foo.h  main.cpp  tests.cpp  time_calc.cpp
lab1/tests/: tests.cpp
lab2/: CMakeLists.txt
lab2/include/: octal.h
lab2/src/: main.cpp  octal.cpp
lab2/tests/: tests.cpp
lab3/: CMakeLists.txt
lab3/include/: figure.h  rectangle.h  square.h  triangle.h
lab3/src/: main.cpp  rectangle.cpp  triangle.cpp
lab3/tests/: 1.in  tests.cpp
lab4/: CMakeLists.txt  README.md
lab4/include/: figure.h  rectangle.h  square.h  template_array.h  triangle.h
lab4/src/: main.cpp
lab4/tests/: 1.input  tests.cpp
lab5/: CMakeLists.txt
lab5/include/: allocator.hpp  stack.hpp  stack_container.hpp
lab5/src/: main.cpp
lab5/tests/: tests.cpp
lab6/: .gitignore  CMakeLists.txt  lab6_exe  logs.txt  npc.txt  tests_exe
lab6/include/: bandit.hpp  elf.hpp  fighting.hpp  knight.hpp  npc.hpp
lab6/patterns/: a.out  builder.cpp  factory.cpp  observer.cpp  visitor.cpp
lab6/src/: bandit.cpp  elf.cpp  knight.cpp  main.cpp  npc.cpp
lab6/tests/: tests.cpp
lab7/: CMakeLists.txt
lab7/include/: bandit.hpp  elf.hpp  knight.hpp  npc.hpp
lab7/src/: bandit.cpp  elf.cpp  knight.cpp  main.cpp  npc.cpp
lab7/tests/: tests.cpp
